# rustchat

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  diesel_demo.sqlite3
migrations/2023-11-02-141216_create_posts/: up.sql
migrations/2023-11-09-064659_create_users/: up.sql
rustchatfrontend/: package.json  pnpm-lock.yaml
src/: main.rs  schema.rs  user.rs
static/: Account.html  Landing.html  Random.html  Rooms.html  index.html  random.html
static_old/: Index.html  index_old.html
