[package]
name = "chatapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "2.1.3", features = ["sqlite"] }
dotenvy = "0.15.7"
rocket_dyn_templates = { version = "0.1.0-rc.4", features = ["handlebars", "tera"] }
rand = "0.8.5"
webrtc = "0.9.0"
rocket_cors = "0.5.2"